--- a/main.css
+++ b/main.css
@@ -34,8 +34,44 @@ html {
     width: 70vw;
     height: 30vh;
     outline: 1px solid black;
-    align-content: center;
 }
+
+#timeline {
+    display: flex;
+    flex-flow:wrap;
+    justify-content: center;
+    align-content: center;
+    height: 30vh;
+}
+
+.timelinebar {
+    width: 50vw;
+    height: 3vh;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    /* position: absolute;
+    left: 20%;
+    right: 20px;
+    top: 20%;
+    height: 10px;
+    margin-bottom: 10px;
+    margin-left: 15px;
+    margin-right: 15px; */ 
+}
+
+.audio {
+    background: lime;
+}
+
+.video {
+    background: blue;
+}
+
+
+
+
+
+
 
 #settingspanel {
     background: #222222;
