--- a/main.css
+++ b/main.css
@@ -45,7 +45,9 @@ html {
 }
 
 .timelinebar {
-    width: 50vw;
+    margin-left: 3vw;
+    bottom: 2vh;
+    width: 59vw;
     height: 3vh;
     margin-bottom: 10px;
     margin-top: 10px;
@@ -115,4 +117,53 @@ button {
 #exportpanel * {
     margin-top: 1vh;
     margin-left: 1vw;
+}
+
+
+.playHeadContainer {
+    position: absolute;
+    width: 59vw;
+    margin-top: 2vh;
+    margin-left: 7vw;
+    bottom: 2vh;
+    /* margin-right: 2vw; */
+}
+
+/* The slider itself */
+#playHeadHandle {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%;
+    height: 2vh;
+    background: none;
+    outline: 0;
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+#playHeadHandle::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 5px;
+    height: 3vh;
+    background: white;
+    cursor: pointer;
+}
+
+/* The slider itself */
+#playHeadBar {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%;
+    height: 23vh;
+    background: none;
+} 
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+#playHeadBar::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 2px;
+    height: 23vh;
+    background: black;
+    cursor: default;
 }
